# fastapi-demo

./: README.md  main.py  pyproject.toml
api/: api.py
api/endpoints/: user.py
app/routers/: users.py
app/sql/: crud.py  models.py  schemas.py
core/: Router.py
curd/: user.py
database/: mysql.py
models/: user.py
